--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <header>
+        
     </header>
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 
 </body>
 </html>
