--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
+    <header>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
 
 </body>
 </html>
