revisi awal header add utility class container and flex adding media query

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 <body>
     <header>
-        <div class ="logo">loliChanel</div>
-        <div class="header-list">
-            <ul>
-                <li>TV series</li>
-                <li>film</li>
-                <li>anime</li>
-            <ul>
-         </div>
+        <div class="container nav">
+            <div class="nav-left flex">
+                <div class ="logo"><img src="/src/assets/img/logo.png" width="30px" alt=""></div>
+                <div class="header-list">
+                    <ul class="flex">
+                        <li><a href="#">TV series</a></li>
+                        <li><a href="#">film</a></li>
+                        <li><a href="#">anime</a></li>
+                    <ul>
+                </div>
+            </div>
+            <div class="nav-right">
+                <input type="text" name="" id="">
+            </div>
+        </div>
     </header>
             
             
