Mengedit body css

--- a/index.html
+++ b/index.html
@@ -130,63 +130,80 @@
     <main>
         <div class="container">
             <div class="heading">
-                <p>Tren Teratas</p>
+                <span>Tren Teratas</span>
                 <a>Lebih Banyak &rarr;</a>
             </div>
-            <div class="main-item">
-                <div class="box1"></div>
-            </div>
-            <div class="main-item">
-                <div class="box2"></div>
-            </div>
-            <div class="main-item">
-                <div class="box3"></div>
-            </div>
-            <div class="main-item">
-                <div class="box4"></div>
+            <div class="list-boxs">
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
+                <div class="main-item">
+                    <div class="box"></div>
+                </div>
             </div>
         </div>
         <div class="container">
             <div class="contents">
-                <p>Nonton Bareng</p>
-                <hr style="
-                max-width: 930px;
-                ">
-                <div class="main-item">
-                    <div class="box5"></div>
+                <div class="title-list-boxs">
+                    <span>Nonton Bareng</span>
+                    <div class="garis"></div>
                 </div>
-                <div class="main-item">
-                    <div class="box6"></div>
+                <div class="list-boxs">
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
+                    <div class="main-item">
+                        <div class="box"></div>
+                    </div>
                 </div>
-                <div class="main-item">
-                    <div class="box7"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box8"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box9"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box10"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box11"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box12"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box13"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box14"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box15"></div>
-                </div>
-                <div class="main-item">
-                    <div class="box16"></div>
             </div>
         </div>
     </main>
@@ -196,20 +213,22 @@
 
     <!-- Start Footer -->
     <footer>
-        <div class="footer-content">
-            <h3>Streaming Gratiss</h3>
-            <p>mari kita bersama sama menonton hal yang ilegal</p>
-            <p>karena yang ilegal itu <b>ASIIK</b></p>
-            <ul class="social">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
-            </ul>
-        </div>
-        <div class="footer-bottom">
-            <p>copyright &copy;2022 LoliCode. desain by <span>oraTuru</span></p>
+        <div class="pembungkus">
+            <div class="footer-content">
+                <h3>Streaming Gratiss</h3>
+                <p>mari kita bersama sama menonton hal yang ilegal</p>
+                <p>karena yang ilegal itu <b>ASIIK</b></p>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>copyright &copy;2022 LoliCode. desain by <span>oraTuru</span></p>
+            </div>
         </div>
     </footer>
     <!-- End Footer -->
