--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <div class="wrapper-content-carousel">
                         <div class="content-carousel">
                             <div class="poster-film" style="background-image: url('/src/assets/img/avengers-assemble-group-poster-1.jpg');"></div>
+                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/avengers-assemble-group-poster-1.jpg');"></div>
                             <div class="body-content">
                                 <h4>Avengers Assemble</h4>
                                 <span>Action &bull; sci-fi &bull; hero</span>
@@ -67,6 +68,7 @@
                     <div class="wrapper-content-carousel">
                         <div class="content-carousel">
                             <div class="poster-film" style="background-image: url('/src/assets/img/film-hit-and-run-poster-1.jpg');"></div>
+                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/film-hit-and-run-poster-1.jpg');"></div>
                             <div class="body-content">
                                 <h4>Hit And Run</h4>
                                 <span>Comedi &bull; Action &bull; romatis</span>
@@ -87,6 +89,7 @@
                     <div class="wrapper-content-carousel">
                         <div class="content-carousel">
                             <div class="poster-film" style="background-image: url('/src/assets/img/justice\ league.webp');"></div>
+                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/justice\ league.webp');"></div>
                             <div class="body-content">
                                 <h4>Justice League</h4>
                                 <span>hero &bull; sci-fi &bull; Action &bull; drama</span>
@@ -213,7 +216,7 @@
 
     <!-- Start Footer -->
     <footer>
-        <div class="pembungkus">
+        <div class="footer-wrapper">
             <div class="footer-content">
                 <h3>Streaming Gratiss</h3>
                 <p>mari kita bersama sama menonton hal yang ilegal</p>
