add responsif img on hero add img tambahan rapihin code

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="wrapper-content-carousel">
                         <div class="content-carousel">
                             <div class="poster-film" style="background-image: url('/src/assets/img/avengers-assemble-group-poster-1.jpg');"></div>
-                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/avengers-assemble-group-poster-1.jpg');"></div>
+                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/small-device/avengers-assemble.jpg');"></div>
                             <div class="body-content">
                                 <h4>Avengers Assemble</h4>
                                 <span>Action &bull; sci-fi &bull; hero</span>
@@ -68,7 +68,7 @@
                     <div class="wrapper-content-carousel">
                         <div class="content-carousel">
                             <div class="poster-film" style="background-image: url('/src/assets/img/film-hit-and-run-poster-1.jpg');"></div>
-                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/film-hit-and-run-poster-1.jpg');"></div>
+                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/small-device/hit-and-run.webp');"></div>
                             <div class="body-content">
                                 <h4>Hit And Run</h4>
                                 <span>Comedi &bull; Action &bull; romatis</span>
@@ -88,8 +88,8 @@
                 <div class="carousel-slide" id="showing-3" tabindex="0">
                     <div class="wrapper-content-carousel">
                         <div class="content-carousel">
-                            <div class="poster-film" style="background-image: url('/src/assets/img/justice\ league.webp');"></div>
-                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/justice\ league.webp');"></div>
+                            <div class="poster-film" style="background-image: url('/src/assets/img/justice-league.webp');"></div>
+                            <div class="poster-film-mobile" style="background-image: url('/src/assets/img/small-device/justice-league.png');"></div>
                             <div class="body-content">
                                 <h4>Justice League</h4>
                                 <span>hero &bull; sci-fi &bull; Action &bull; drama</span>
