--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ProWatch</title>
     <link rel="icon" type="image/png" href="src/assets/img/logo.ico">
     <link rel="stylesheet" href="src/css/main.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Start Header -->
